<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_feature_searchkit" translatable="false">Search Kit</string>
    <string name="title_quickapp" translatable="false">QuickApp</string>
    <string name="title_feature_quickapp">QuickApp</string>
    <string name="title_feature_inapppurchase">In App Purchase Module</string>
    <string name="title_feature_wirelesskit">Wireless Kit</string>
    <string name="title_feature_acceleratekit">Accelerate Kit</string>
    <string name="title_feature_cloudfunctions">Cloud Functions</string>
    <string name="title_feature_castengine">Cast Engine</string>
    <string name="title_feature_gameservices">Game Services Module</string>
    <string name="title_feature_hiai">HiAI</string>
    <string name="title_feature_awarenesskitrework">Awareness Kit</string>
    <string name="title_feature_clouddb">Cloud DB</string>
    <string name="title_feature_drivekit">Drive Kit</string>
    <string name="title_feature_caaskit">CaaS Kit</string>
    <string name="title_feature_walletkit">Wallet Kit</string>
    <string name="title_feature_cloudhosting">Cloud Hosting</string>
    <string name="title_feature_appsigning">App Signing</string>
    <string name="title_feature_computergraphics">Computer Graphics Kit</string>
    <string name="title_feature_opentesting">Open Testing</string>
    <string name="title_feature_crashservice">Feature Crash Service</string>
    <string name="title_feature_cloudtesting">Cloud Testing</string>
    <string name="title_feature_hquic">hQUIC</string>
    <string name="title_feature_clouddebugging">Cloud Debugging</string>
    <string name="title_feature_remoteconfig">Remote Configuration</string>
    <string name="title_feature_abtest">feature_abtest</string>
    <string name="title_wiseplaydrm">WisePlayDRM</string>
    <string name="title_operationanalysis">Operation Analysis</string>
    <string name="title_feature_onehopengine">OneHop Engine</string>
    <string name="title_feature_cloudstorage">Cloud Storage</string>
    <string name="title_feature_appmessaging">App Messaging</string>
    <string name="title_feature_appbundle">Feature App Bundle</string>
    <string name="title_feature_paidapps">Paid Apps</string>
    <string name="title_feature_apprelease">fature_apprelease</string>
    <string name="title_feature_preorders">feature_preorders</string>
    <string name="title_feature_earlyaccess">feature_earlyaccess</string>
    <string name="title_feature_inapppurchases">In-App Purchases</string>
    <string name="title_feature_integrationcheck">Integration Check</string>
    <string name="title_feature_apm">App Performance Management</string>
    <string name="title_feature_comments">Comments</string>
    <string name="title_feature_giftmanagement">Gift Management</string>
    <string name="title_feature_gameservicesrework">Game Services</string>
    <string name="title_feature_productmanagement">Product Management</string>
    <string name="title_feature_phasedrelease">Phased Release</string>
    <string name="title_feature_audioengine">Audio Engine</string>
    <string name="title_feature_dynamicability">Dynamic Ability</string>
    <string name="title_dynamicfeaturetest">Dynamic Feature test</string>
    <string name="title_feature_appgallerykit">AppGalleryKit</string>
    <string name="title_feature_distributionanalysis">Distribution Analysis</string>
    <string name="title_feature_wearengine">Wear Engine</string>
    <string name="title_feature_arengine">AR Engine</string>
    <string name="title_feature_localauthenticationengine">Local Authentication Engine</string>
    <string name="title_feature_datasecurityengine">Data Security Engine</string>
    <string name="title_feature_devicevirtualizationengine">Device Virtualization Engine</string>
    <string name="title_feature_hiaifoundation">HiAI Foundation</string>
    <string name="title_feature_connectapi">Connect API</string>
    <string name="title_feature_mlkit">Machine Learning - ML Kit</string>
    <string name="title_feature_authservice">AuthService</string>
    <string name="title_feature_mapkit">Map Kit</string>
    <string name="show_direction_routing_mapkit">Show Routes</string>
    <string name="open_petalMap_MapKit">Open Petal Map</string>
    <string name="heat_Map">Heat Map</string>
    <string name="title_feature_scankit">Scan Kit</string>
    <string name="title_feature_nearbyservice">Nearby Service</string>
    <string name="title_feature_dynamictagmanager">Dynamic Tag Manager</string>
    <string name="title_feature_panorama">Panorama</string>
    <string name="title_feature_imagekit">Image Kit</string>
    <string name="title_feature_awarenesskit">Awareness Kit</string>
    <string name="title_feature_analyticskit">Analytics Kit</string>
    <string name="title_feature_videokit">VideoKit</string>
    <string name="title_feature_healthkit">Health Kit</string>
    <string name="title_feature_adskit">AdsKit Module</string>
    <string name="title_feature_scenekit">Scene Kit</string>
    <string name="title_feature_pushkit">Push Kit</string>
    <string name="title_feature_accountkit">Account Kit</string>
    <string name="title_feature_identitykit">Identity Kit</string>
    <string name="title_feature_in_app_purchasekit">InAppPurchase Kit</string>
    <string name="title_feature_fidokit">Fido Kit</string>
    <string name="title_feature_applinking">App Linking</string>
    <string name="title_feature_shareengine">Share Engine</string>
    <string name="title_feature_audiokit">Audio Kit</string>
    <string name="title_feature_safetydetect">SafetyDetect</string>
    <string name="title_feature_cameraengine">Camera Engine</string>
    <string name="app_name">Explore HMS</string>
    <string name="txt_not_available">NA</string>
    <string name="default_text">Default Text</string>
    <string name="url_txt_pushkit">https://developer.huawei.com/consumer/en/doc/development/HMSCore-Guides/service-introduction-0000001050040060</string>
    <string name="copy">Copy</string>
    <string name="copy_toast">Content has been copied</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="add_contact">Add Contact</string>
    <string name="send_email">Send Email</string>
    <string name="navigation">Navigation</string>
    <string name="call">Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="connect_network">Connet to network</string>
    <string name="open_browser">Open in browser</string>
    <string name="text_for_app_bundle_toolbar">App Bundle Distribution</string>
    <string name="text_for_app_bundle_header">AGC App Bundle Distribution Information</string>
    <string name="text_for_app_bundle_image_description">App bundle banner</string>
    <string name="txt_for_app_bundle_distribution"><a href="">Click here to learn more about AGC App Bundle Distribution</a></string>
    <string name="txt_for_app_bundle_distribution_link">https://developer.huawei.com/consumer/en/doc/distribution/app/18527283</string>
    <string name="txt_for_app_bundle_information">Users are generally more willing to download smaller apps. Therefore, reducing the size of your app package to the greatest possible extent, is essential for boosting its download and installation success rate. App Bundle does this for you, and has become the preferred service for an increasing number of developers. HUAWEI AppGallery Connect allows you to release your app in App Bundle format, with the relevant Huawei SDKs integrated, ensuring that users only need to download the required content, bundled in a smaller, more streamlined app package.</string>
    <string name="text_for_apm_tool_bar">App Performance Management</string>
    <string name="text_for_apm_banner_description">AGC APM banner</string>
    <string name="text_for_apm_description">App Performance Management (APM) of HUAWEI AppGallery Connect provides minute-level app performance monitoring capabilities.\n\nApp developers can view and analyze app performance data collected by APM in AppGallery Connect to improve user experience and solve app performance problem quickly. </string>
    <string name="text_for_apm_key_functions"><b>Key Functions</b></string>
    <string name="text_for_apm_first_function"><b>\u2022 Automatic performance monitoring</b></string>
    <string name="apm_anr_view"><b>App ANR Monitoring :</b>The APM service can monitor the trend and impact of ANR and collect detailed information when ANR problems occur, helping you quickly locate and resolve ANR problems.</string>
    <string name="apm_app_launch_monitoring"><b>App Launch Monitoring :</b> This function monitors the app launch duration, so that you can understand the app launch performance in a timely manner.</string>
    <string name="apm_app_screen_monitoring"><b>App Screen Monitoring :</b> This function displays the percentages of slow frame screens and frozen frame screens, providing you with performance analysis data of app screen rendering.</string>
    <string name="apm_foreground_act_monitoring"><b>Foreground Activity Monitoring :</b> APM monitors the duration of foreground activities of your app, helping you understand the performance of your apps in the foreground in a timely and comprehensive manner.</string>
    <string name="apm_background_act_monitoring"><b>Background Activity Monitoring :</b> APM monitors the duration of background activities of your app, helping you understand the performance of your apps in the background in a timely and comprehensive manner.</string>
    <string name="apm_custom_app_performance_mon"><b>Custom App Performance Monitoring :</b> APM captures the performance of your app in specific scenarios and evaluates the performance with custom indicators to provide overall monitoring of app performance.</string>
    <string name="apm_network_req_monitoring"><b>Network Request Monitoring :</b> APM monitors HTTP/HTTPS network requests initiated by the OkHttp, URLConnection, and ApacheHttpClient and clusters data of the same type of network requests by matching URL clustering rules and detect network problems.</string>
    <string name="text_for_apm_second_function"><b>\u2022 Real-time reports</b></string>
    <string name="text_for_apm_second_function_desc">Displays a broad spectrum of app performance data that updates by the minute; draws tendency curves outlining device, OS, CPU, memory, and network request performance, enabling you to address any potential issues promptly.</string>
    <string name="text_for_apm_third_function"><b>\u2022 Custom traces and indicators</b></string>
    <string name="text_for_apm_third_function_desc">Monitors your app via tailored traces and indicators, providing a detailed glimpse of app performance.\n\n<b>Note:</b>Nowadays Custom trace can be used Android and Web applications.</string>
    <string name="text_for_apm_link_name_for_codelab">App Performance Management (APM) Codelab</string>
    <string name="txt_name">Name: Turkey</string>
    <string name="txt_country">Country: Turkey</string>
    <string name="txt_locality">Locality: Turkey</string>
    <string name="txt_sub_locality">Sub Locality: Turkey</string>
    <string name="txt_admin_area">Admin Area: Turkey</string>
    <string name="txt_thoroughfare">Thoroughfare: Turkey</string>
    <string name="txt_sub_admin_area">Sub Admin Area: Turkey</string>
    <string name="txt_street_number">Street Number: Turkey</string>
    <string name="txt_postal_code">Postal Code: Turkey</string>
    <string name="txt_latitude">Latitude: Turkey</string>
    <string name="txt_longitude">Longitude: Turkey</string>
    <string name="txt_widget">The widget is a search component of the built-in place search suggestion feature.</string>
    <string name="detail_header_sitekit">Place Detail</string>
    <string name="site_kit_widget_text_sitekit">Widget</string>
    <string name="place_text_sitekit">Place</string>
</resources>