<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~   Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   You may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/apmToolbar"
        style="@style/ToolbarAppearance.Sandbox.Normal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/text_for_apm_tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnApmCodelab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apmToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/text_for_apm_banner_description"
                app:srcCompat="@drawable/apm_banner" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_key_functions" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView5"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_first_function" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView12"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_anr_view" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView9"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_app_launch_monitoring" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView13"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_app_screen_monitoring" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView14"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_foreground_act_monitoring" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView15"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_background_act_monitoring" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView16"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_custom_app_performance_mon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView17"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apm_network_req_monitoring" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView6"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_second_function" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView10"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_second_function_desc" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_third_function" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView8"
                style="@style/TextAppearance.Sandbox.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_for_apm_third_function_desc" />

        </LinearLayout>
    </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApmCodelab"
            style="@style/ButtonAppearance.Sandbox.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_for_apm_link_name_for_codelab" />

</androidx.constraintlayout.widget.ConstraintLayout>