<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) Huawei Technologies Co., Ltd. 2020-2022. All rights reserved.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/h16"
        android:layout_marginBottom="@dimen/h16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_detail_header"
            style="@style/TextAppearance.ExploreHMS.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_text_sitekit" />

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            tools:text="@string/txt_name" />

        <TextView
            android:id="@+id/tv_detail_country"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_country" />

        <TextView
            android:id="@+id/tv_detail_locality"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_locality" />

        <TextView
            android:id="@+id/tv_detail_sub_locality"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_sub_locality" />

        <TextView
            android:id="@+id/tv_detail_admin_area"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_admin_area" />

        <TextView
            android:id="@+id/tv_detail_sub_admin_area"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_sub_admin_area" />

        <TextView
            android:id="@+id/tv_detail_thoroughfare"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_thoroughfare" />

        <TextView
            android:id="@+id/tv_detail_street_number"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_street_number" />

        <TextView
            android:id="@+id/tv_detail_postal_code"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_postal_code" />

        <TextView
            android:id="@+id/tv_detail_lat"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_latitude" />

        <TextView
            android:id="@+id/tv_detail_ln"
            style="@style/TextAppearance.ExploreHMS.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            tools:text="@string/txt_longitude" />
    </LinearLayout>

    <View
        android:id="@+id/separatorItem_sitekit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray1nt"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lll" />

</androidx.constraintlayout.widget.ConstraintLayout>