<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~   Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   You may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hms.explorehms.sitekit.SiteKitWidgetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_widget"
        style="@style/ToolbarAppearance.ExploreHMS.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/site_kit_widget_text_sitekit" />

    <TextView
        android:id="@+id/text_view"
        style="@style/TextAppearance.ExploreHMS.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/h16"
        android:layout_marginTop="@dimen/h16"
        android:layout_marginEnd="@dimen/h16"
        android:layout_marginBottom="@dimen/h16"
        android:text="@string/txt_widget"/>

    <include
        android:id="@+id/widget_sitekit"
        layout="@layout/widget_sitekit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        tools:layout_constraintRight_toRightOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/h16"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@+id/widget_sitekit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_detail_header"
                style="@style/TextAppearance.ExploreHMS.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_header_sitekit"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TextView
                android:id="@+id/tv_detail_name"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="16dp"
                tools:text="@string/txt_name" />

            <TextView
                android:id="@+id/tv_detail_country"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_country" />

            <TextView
                android:id="@+id/tv_detail_locality"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_locality" />

            <TextView
                android:id="@+id/tv_detail_sub_locality"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_sub_locality" />

            <TextView
                android:id="@+id/tv_detail_admin_area"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_admin_area" />

            <TextView
                android:id="@+id/tv_detail_sub_admin_area"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_sub_admin_area" />

            <TextView
                android:id="@+id/tv_detail_thoroughfare"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_thoroughfare" />

            <TextView
                android:id="@+id/tv_detail_street_number"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_street_number" />

            <TextView
                android:id="@+id/tv_detail_postal_code"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_postal_code" />

            <TextView
                android:id="@+id/tv_detail_lat"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_latitude" />

            <TextView
                android:id="@+id/tv_detail_ln"
                style="@style/TextAppearance.ExploreHMS.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                tools:text="@string/txt_longitude" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>